# autocad

./: .firebaserc  .gitignore  .vercelignore  README.md  database.rules.json  firebase.json  firestore.indexes.json  firestore.rules  oauth.env.example  package-lock.json  setup.bat  setup.sh  start.bat  start.sh  storage.rules  vercel.json
.firebase/: hosting.bGFuZGluZw.cache
backend/: .env.example  main.py  pyproject.toml  requirements-cad.txt  requirements.txt
backend/app/: main.py  vercel_main.py
backend/app/account/: __init__.py  delete_service.py
backend/app/ai/: agent.py  analysis.py  chat.py  chat_system_prompt.py  face_reference.py  knowledge.py  llm.py  modelling.py  models.py  quota.py  recap.py  text_to_cad.py  usage.py  usage_pricing.py
backend/app/api/: account.py  billing.py  calendar_sync.py  connector_resources.py  connectors.py  desktop_auth.py  handoffs.py  outlook_calendar_sync.py  routes.py  routes_lite.py  user_calendar_events.py
backend/app/billing/: __init__.py  checkout_timing.py  currency_localize.py  stripe_service.py  webhook_events.py
backend/app/calendar/: event_store.py
backend/app/connectors/: __init__.py  oauth.py  oauth_state.py  registry.py  store.py  tokens.py  user_store.py
backend/app/core/: auth_deps.py  config.py  firebase.py  secrets.py  theme.py
backend/app/engine/: exporter.py  kernel.py  mesh_import.py
backend/app/models/: schemas.py
backend/app/vision/: drawing.py
desktop/: afterPack.cjs  afterSign.cjs  electron-builder.config.cjs  evs-sign.cjs  main.cjs  package-lock.json  package.json  preload.cjs  (+4 more)
(+560 files in other folders)
