[project]
name = "forma-backend"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115,<0.130",
  "pydantic>=2.7,<2.12",
  "pydantic-core>=2.18,<2.28",
  "uvicorn[standard]>=0.30",
  "python-multipart>=0.0.9",
  "httpx>=0.27",
  "python-dotenv>=1.0",
  "firebase-admin>=6.6",
  "stripe>=11,<14",
]

[tool.vercel]
entrypoint = "main:app"
